@@ -158,6 +158,8 @@ Item
     default property list<Object> contents
     property int align
     property bool opened
+    function open()
+    function close()
     property bool locked
     property real hintSize
     property real triggerSize
